--- a/Documentacion_php.ipynb
+++ b/Documentacion_php.ipynb
@@ -9,9 +9,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d7b91c20",
-   "metadata": {},
+   "cell_type": "raw",
+   "id": "8e450d48",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "<?php\n",
     "echo \"¡Hola Mundo!\";\n",
@@ -27,9 +31,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "c449360d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "<?php\n",
     "// Esto es un comentario de una línea\n",
@@ -52,7 +60,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "af10a610",
    "metadata": {},
    "source": [
@@ -79,7 +87,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "babb5760",
    "metadata": {},
    "source": [
@@ -114,7 +122,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "1e7ab50f",
    "metadata": {},
    "source": [
@@ -140,7 +148,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "02c3bd99",
    "metadata": {},
    "source": [
@@ -165,15 +173,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "id": "9f492b49",
    "metadata": {
     "vscode": {
-     "languageId": "php"
+     "languageId": "raw"
     }
    },
-   "outputs": [],
    "source": [
     "<?php\n",
     "\n",
@@ -225,15 +231,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "id": "093af501",
    "metadata": {
     "vscode": {
-     "languageId": "php"
+     "languageId": "raw"
     }
    },
-   "outputs": [],
    "source": [
     "<?php\n",
     "\n",
@@ -271,8 +275,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
