--- a/Documentacion_php.ipynb
+++ b/Documentacion_php.ipynb
@@ -9,16 +9,29 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8e450d48",
    "metadata": {
     "vscode": {
-     "languageId": "raw"
+     "languageId": "php"
     }
    },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.14.0' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/dante/AppData/Local/Programs/Python/Python314/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "<?php\n",
-    "echo \"¡Hola Mundo!\";\n",
+    "echo '¡Hola Mundo!';\n",
     "?>"
    ]
   },
