Carga de la documentación

--- a/Documentacion_php.ipynb
+++ b/Documentacion_php.ipynb
@@ -44,13 +44,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c449360d",
    "metadata": {
     "vscode": {
-     "languageId": "raw"
+     "languageId": "php"
     }
    },
+   "outputs": [],
    "source": [
     "<?php\n",
     "// Esto es un comentario de una línea\n",
@@ -73,9 +75,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "af10a610",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "php"
+    }
+   },
+   "outputs": [],
    "source": [
     "<?php\n",
     "// Las variables en PHP empiezan con $\n",
@@ -100,9 +108,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "babb5760",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "php"
+    }
+   },
+   "outputs": [],
    "source": [
     "<?php\n",
     "// String (Cadena de texto)\n",
@@ -135,9 +149,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1e7ab50f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "php"
+    }
+   },
+   "outputs": [],
    "source": [
     "<?php\n",
     "$a = 10;\n",
@@ -161,9 +181,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "02c3bd99",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "php"
+    }
+   },
+   "outputs": [],
    "source": [
     "<?php\n",
     "$x = 5;\n",
@@ -186,13 +212,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9f492b49",
    "metadata": {
     "vscode": {
-     "languageId": "raw"
+     "languageId": "php"
     }
    },
+   "outputs": [],
    "source": [
     "<?php\n",
     "\n",
@@ -244,13 +272,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "093af501",
    "metadata": {
     "vscode": {
-     "languageId": "raw"
+     "languageId": "php"
     }
    },
+   "outputs": [],
    "source": [
     "<?php\n",
     "\n",
