--- a/Documentacion_php.ipynb
+++ b/Documentacion_php.ipynb
@@ -12,27 +12,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e450d48",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.14.0' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/dante/AppData/Local/Programs/Python/Python314/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "<?php\n",
     "echo '¡Hola Mundo!';\n",
-    "?>"
+    "?>\n",
+    "'''"
    ]
   },
   {
@@ -47,13 +34,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c449360d",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "<?php\n",
     "// Esto es un comentario de una línea\n",
     "\n",
@@ -63,7 +47,8 @@
     "Esto es un comentario\n",
     "de múltiples líneas\n",
     "*/\n",
-    "?>"
+    "?>\n",
+    "'''"
    ]
   },
   {
@@ -78,13 +63,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "af10a610",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "<?php\n",
     "// Las variables en PHP empiezan con $\n",
     "$nombre = \"Juan\";\n",
@@ -96,7 +78,8 @@
     "echo \"Edad: \" . $edad . \"<br>\";\n",
     "echo \"Altura: \" . $altura . \"<br>\";\n",
     "echo \"Es estudiante: \" . ($esEstudiante ? \"Si\" : \"No\") . \"<br>\";\n",
-    "?>"
+    "?>\n",
+    "'''"
    ]
   },
   {
@@ -111,14 +94,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "babb5760",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "<?php\n",
+    "'''<?php\n",
     "// String (Cadena de texto)\n",
     "$cadena = \"Hola PHP\";\n",
     "\n",
@@ -137,7 +116,7 @@
     "\n",
     "// Null\n",
     "$nulo = null;\n",
-    "?>"
+    "?>'''"
    ]
   },
   {
@@ -152,14 +131,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1e7ab50f",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "<?php\n",
+    "'''<?php\n",
     "$a = 10;\n",
     "$b = 3;\n",
     "\n",
@@ -169,7 +144,7 @@
     "echo \"División: \" . ($a / $b) . \"<br>\";\n",
     "echo \"Módulo: \" . ($a % $b) . \"<br>\";\n",
     "echo \"Potencia: \" . ($a ** $b) . \"<br>\";\n",
-    "?>"
+    "?>'''"
    ]
   },
   {
@@ -184,14 +159,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "02c3bd99",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "<?php\n",
+    "'''<?php\n",
     "$x = 5;\n",
     "$y = \"5\";\n",
     "$z = 10;\n",
@@ -200,7 +171,7 @@
     "echo \"x === y: \" . ($x === $y ? \"true\" : \"false\") . \"<br>\"; // false (diferente tipo)\n",
     "echo \"x != y: \" . ($x != $y ? \"true\" : \"false\") . \"<br>\";   // false\n",
     "echo \"x < z: \" . ($x < $z ? \"true\" : \"false\") . \"<br>\";     // true\n",
-    "?>"
+    "?>'''"
    ]
   },
   {
@@ -215,14 +186,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9f492b49",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "<?php\n",
+    "'''<?php\n",
     "\n",
     "// IF-ELSE\n",
     "$edad = 18;\n",
@@ -260,7 +227,7 @@
     "        echo \"Día normal<br>\";\n",
     "        break;\n",
     "}\n",
-    "?>"
+    "?>'''"
    ]
   },
   {
@@ -275,14 +242,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "093af501",
-   "metadata": {
-    "vscode": {
-     "languageId": "php"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "<?php\n",
+    "'''<?php\n",
     "\n",
     "// Funcion básica\n",
     "function saludar($nombre) {\n",
@@ -313,7 +276,7 @@
     "echo \"Suma: \" . $resultados[0] . \"<br>\";\n",
     "echo \"Resta: \" . $resultados[1] . \"<br>\";\n",
     "echo \"Multiplicación: \" . $resultados[2] . \"<br>\";\n",
-    "?>"
+    "?>'''"
    ]
   }
  ],
