Carga de la documentación

--- a/Documentacion_php.ipynb
+++ b/Documentacion_php.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ce3a4913",
+   "metadata": {},
+   "source": [
+    "Para ejecutar código en PHP, se debe escribir dicho código dentro de: \n",
+    "<?php \n",
+    "\"Aquí va el codigo\"\n",
+    "?>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edafdc11",
    "metadata": {},
    "source": [
@@ -36,7 +47,6 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "<?php\n",
     "// Esto es un comentario de una línea\n",
     "\n",
     "# Esto también es un comentario de una línea\n",
@@ -45,7 +55,6 @@
     "Esto es un comentario\n",
     "de múltiples líneas\n",
     "*/\n",
-    "?>\n",
     "'''"
    ]
   },
@@ -65,7 +74,6 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "<?php\n",
     "// Las variables en PHP empiezan con $\n",
     "$nombre = \"Juan\";\n",
     "$edad = 25;\n",
@@ -76,7 +84,6 @@
     "echo \"Edad: \" . $edad . \"<br>\";\n",
     "echo \"Altura: \" . $altura . \"<br>\";\n",
     "echo \"Es estudiante: \" . ($esEstudiante ? \"Si\" : \"No\") . \"<br>\";\n",
-    "?>\n",
     "'''"
    ]
   },
@@ -95,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''<?php\n",
+    "'''\n",
     "// String (Cadena de texto)\n",
     "$cadena = \"Hola PHP\";\n",
     "\n",
@@ -114,7 +121,7 @@
     "\n",
     "// Null\n",
     "$nulo = null;\n",
-    "?>'''"
+    "'''"
    ]
   },
   {
@@ -132,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''<?php\n",
+    "'''\n",
     "$a = 10;\n",
     "$b = 3;\n",
     "\n",
@@ -142,7 +149,7 @@
     "echo \"División: \" . ($a / $b) . \"<br>\";\n",
     "echo \"Módulo: \" . ($a % $b) . \"<br>\";\n",
     "echo \"Potencia: \" . ($a ** $b) . \"<br>\";\n",
-    "?>'''"
+    "'''"
    ]
   },
   {
@@ -160,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''<?php\n",
+    "'''\n",
     "$x = 5;\n",
     "$y = \"5\";\n",
     "$z = 10;\n",
@@ -169,7 +176,7 @@
     "echo \"x === y: \" . ($x === $y ? \"true\" : \"false\") . \"<br>\"; // false (diferente tipo)\n",
     "echo \"x != y: \" . ($x != $y ? \"true\" : \"false\") . \"<br>\";   // false\n",
     "echo \"x < z: \" . ($x < $z ? \"true\" : \"false\") . \"<br>\";     // true\n",
-    "?>'''"
+    "'''"
    ]
   },
   {
@@ -187,8 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''<?php\n",
-    "\n",
+    "'''\n",
     "// IF-ELSE\n",
     "$edad = 18;\n",
     "\n",
@@ -225,7 +231,7 @@
     "        echo \"Día normal<br>\";\n",
     "        break;\n",
     "}\n",
-    "?>'''"
+    "'''"
    ]
   },
   {
@@ -243,8 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''<?php\n",
-    "\n",
+    "'''\n",
     "// Funcion básica\n",
     "function saludar($nombre) {\n",
     "    return \"Hola, \" . $nombre . \"!\";\n",
@@ -274,7 +279,7 @@
     "echo \"Suma: \" . $resultados[0] . \"<br>\";\n",
     "echo \"Resta: \" . $resultados[1] . \"<br>\";\n",
     "echo \"Multiplicación: \" . $resultados[2] . \"<br>\";\n",
-    "?>'''"
+    "'''"
    ]
   }
  ],
